--- a/styles/dnd.module.css
+++ b/styles/dnd.module.css
@@ -75,21 +75,22 @@
 
 .card {
   margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
+  padding: 1rem;
+  width: 120px;
+  text-align: center; 
+  background-color: rgb(235, 197, 125);
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px  #e40202;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  /* transition: color 0.15s ease, border-color 0.15s ease; */
+  /* max-width: 300px; */
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #000000;
+  /* border-color: #000000; */
 }
 
 .card h2 {
@@ -102,19 +103,15 @@
   font-size: 1.25rem;
   line-height: 1.5;
 }
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
+ 
+/* 
 @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
   }
-}
-
+} */
+/* 
 @media (prefers-color-scheme: dark) {
   .card,
   .footer {
@@ -126,4 +123,4 @@
   .logo img {
     filter: invert(1);
   }
-}
+} */
