--- a/styles/dnd.module.css
+++ b/styles/dnd.module.css
@@ -103,7 +103,20 @@
   font-size: 1.25rem;
   line-height: 1.5;
 }
- 
+.componentItem { 
+  margin: 0px;
+}
+.cardItem{
+  margin: 0 ;
+  padding: 0 ;
+  width: "100%";
+  /* text-align: center;  */
+  background-color: rgb(235, 197, 125);
+  /* text-decoration: none; */
+  /* border: 1px  #e40202; */
+  /* border-radius: 10px; */
+  
+}
 /* 
 @media (max-width: 600px) {
   .grid {
