--- a/styles/dnd.module.css
+++ b/styles/dnd.module.css
@@ -112,9 +112,9 @@
   width: "100%";
   /* text-align: center;  */
   background-color: rgb(235, 197, 125);
-  /* text-decoration: none; */
+  text-decoration: none;
   /* border: 1px  #e40202; */
-  /* border-radius: 10px; */
+  border-radius: 10px;
   
 }
 /* 
